--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <table>
 
       <tr>
-        <td></td>
+        <td>
+          <h3>Logo Project</h3>
+          <a href = "Logo/LogoReflection.html"><img src="Logo/DuncanPicture.png" width = 70%></a>
+        </td>
         <td></td>
         <td></td>
       </tr>
