--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
           <h3>Logo Project</h3>
           <a href = "Logo/LogoReflection.html"><img src="Logo/DuncanPicture.png" width = 70%></a>
         </td>
-        <td></td>
-        <td></td>
+        <td>
+          <h3>Slot Animal</h3>
+          <a href = "SlotAnimal/SlotAnimalReflection.html"><img src="SlotAnimal/DuncanSlotAnimal.png" width = 70%></a>
+        </td>
+        <td>
+          <h3>Press Fit Box</h3>
+          <a href = "PressFit/PressFitReflection.html"><img src="PressFit/DuncanPressFit.png" width = 70%></a>
+        </td>
       </tr>
 
       <tr>
