--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
       </tr>
 
       <tr>
-        <td></td>
-        <td></td>
+        <td>
+          <h3>1:1</h3>
+          <a><img src="OneToOne/DuncanOneToOne.png" width = 70%></a>
+        </td>
+        <td>
+          <h3>3d Car Project</h3>
+          <a href = "3Dcar/EmbedVideo/3dReflection.html"><img src="3Dcar/3DCarFinal.jpg" width = 70%></a>
+        </td>
         <td></td>
       </tr>
 
