--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <tr>
         <td>
           <h3>1:1</h3>
-          <a><img src="OneToOne/DuncanOneToOne.png" width = 70%></a>
+          <a href = "OneToOne/SlideShow.html"><img src="OneToOne/DuncanOneToOne.png" width = 70%></a>
         </td>
         <td>
           <h3>3d Car Project</h3>
