--- a/PressFit/PressFitReflection.html
+++ b/PressFit/PressFitReflection.html
@@ -21,7 +21,8 @@
 </head>
 
 <body>
-
+  <a href="../index.html>"><h2>Home</h2></a>
+  <scrpt src="../sketch.js"></script>
 
 
         <iframe src="https://docs.google.com/document/d/e/2PACX-1vT17hwruKZBRs3H7MU1Zmp-wGdcKzAosPf6q4oqT4QVF64alF6-ycLpSxB4S8K_Z2USVNgA5aKXvx0A/pub?embedded=true"></iframe>
