--- a/OneToOne/SlideShow.html
+++ b/OneToOne/SlideShow.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <head>
-
+  <script src="p5.js"></script>
+  <script src="p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
     <style>
 
         iframe {
@@ -19,7 +21,8 @@
 </head>
 
 <body>
-
+  <a href="../index.html>"><h2>Home</h2></a>
+  <script src="../sketch.js"></script>
 
 
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTXN0MosTFCAMa8UuapQMgOkHb7fUWk9UTivfPEUdufOkhMKY278AKqkPBLH455Lp4CDbelMHYsXXSU/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
