--- a/3Dcar/EmbedVideo/3dReflection.html
+++ b/3Dcar/EmbedVideo/3dReflection.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <a href="../index.html>"><h2>Home</h2></a>
+  <a href="../index.html"><h2>Home</h2></a>
   <script src="../sketch.js"></script>
     <h1>3D Car Project Reflection</h1>
     <video width="640" controls>
