--- a/Logo/LogoReflection.html
+++ b/Logo/LogoReflection.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <a href="../index.html>"><h2>Home</h2></a>
+  <a href="../index.html"><h2>Home</h2></a>
   <script src="../sketch.js"></script>
 
 
