--- a/3Dcar/EmbedVideo/3dReflection.html
+++ b/3Dcar/EmbedVideo/3dReflection.html
@@ -23,8 +23,8 @@
 </head>
 
 <body>
-  <a href="../index.html"><h2>Home</h2></a>
-  <script src="../sketch.js"></script>
+  <a href="../../index.html"><h2>Home</h2></a>
+  <script src="../../sketch.js"></script>
     <h1>3D Car Project Reflection</h1>
     <video width="640" controls>
         <source src="3dCarProjectRelfection.mp4" type="video/mp4">
