--- a/3Dcar/EmbedVideo/3dReflection.html
+++ b/3Dcar/EmbedVideo/3dReflection.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-  <script src="p5.js"></script>
-  <script src="p5.sound.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="../../p5.js"></script>
+  <script src="../../p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../../style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@500&family=Roboto:wght@300&display=swap" rel="stylesheet">
 
