--- a/PressFit/PressFitReflection.html
+++ b/PressFit/PressFitReflection.html
@@ -4,7 +4,7 @@
   <script src="../p5.js"></script>
   <script src="../p5.sound.min.js"></script>
   <link rel="stylesheet" type="text/css" href="../style.css">
-    <style>
+    <!--<style>
 
         iframe {
             margin-left: 15vw;
@@ -16,7 +16,7 @@
             z-index: -1;
         }
 
-    </style>
+    </style>-->
 
 </head>
 
@@ -25,7 +25,7 @@
   <script src="../sketch.js"></script>
 
 
-        <iframe src="https://docs.google.com/document/d/e/2PACX-1vT17hwruKZBRs3H7MU1Zmp-wGdcKzAosPf6q4oqT4QVF64alF6-ycLpSxB4S8K_Z2USVNgA5aKXvx0A/pub?embedded=true"></iframe>
+        <!--<iframe src="https://docs.google.com/document/d/e/2PACX-1vT17hwruKZBRs3H7MU1Zmp-wGdcKzAosPf6q4oqT4QVF64alF6-ycLpSxB4S8K_Z2USVNgA5aKXvx0A/pub?embedded=true"></iframe>-->
 
 
 
