--- a/3Dcar/EmbedVideo/3dReflection.html
+++ b/3Dcar/EmbedVideo/3dReflection.html
@@ -24,7 +24,7 @@
 
 <body>
   <a href="../../index.html"><h2>Home</h2></a>
-  <script src="../../sketch.js"></script>
+  <script src="sketch.js"></script>
     <h1>3D Car Project Reflection</h1>
     <video width="640" controls>
         <source src="3dCarProjectRelfection.mp4" type="video/mp4">
