--- a/OneToOne/SlideShow.html
+++ b/OneToOne/SlideShow.html
@@ -13,7 +13,7 @@
             height: 95vh;
             width: 70vw;
             position: absolute;
-            z-index: -1;
+            z-index: 1;
         }
 
     </style>
@@ -22,7 +22,7 @@
 
 <body>
   <a href="../index.html"><h2>Home</h2></a>
-  <script src="../sketch.js"></script>
+  <script src="sketch.js"></script>
 
 
         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTXN0MosTFCAMa8UuapQMgOkHb7fUWk9UTivfPEUdufOkhMKY278AKqkPBLH455Lp4CDbelMHYsXXSU/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
