--- a/PressFit/PressFitReflection.html
+++ b/PressFit/PressFitReflection.html
@@ -13,7 +13,7 @@
             height: 95vh;
             width: 70vw;
             position: absolute;
-            z-index: -1;
+            z-index: 1;
         }
 
     </style>
@@ -22,7 +22,7 @@
 
 <body>
   <a href="../index.html"><h2>Home</h2></a>
-  <script src="../sketch.js"></script>
+  <script src="sketch.js"></script>
 
 
         <iframe src="https://docs.google.com/document/d/e/2PACX-1vT17hwruKZBRs3H7MU1Zmp-wGdcKzAosPf6q4oqT4QVF64alF6-ycLpSxB4S8K_Z2USVNgA5aKXvx0A/pub?embedded=true"></iframe>
