--- a/SlotAnimal/SlotAnimalReflection.html
+++ b/SlotAnimal/SlotAnimalReflection.html
@@ -13,7 +13,7 @@
             height: 95vh;
             width: 70vw;
             position: absolute;
-            z-index: -1;
+            z-index: 1;
         }
 
     </style>
@@ -22,7 +22,7 @@
 
 <body>
   <a href="../index.html"><h2>Home</h2></a>
-  <script src="../sketch.js"></script>
+  <script src="sketch.js"></script>
 
         <iframe src="https://docs.google.com/document/d/e/2PACX-1vSvU883w4yI9-Z58TIK3DDfbsKQnURp7Ur3MgGVoNJLED2NSdCzZchZd0E8FmGTlJ2prg_uvRGUDg2X/pub?embedded=true"></iframe>
 
